--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es2018",
+      "target": "ES5",
       "module": "commonjs",
       "declaration": true,
       "outDir": "./dist",
