--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@genify/lambda-sdk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Lambda SDK for file uploads and IPFS integration",
   "main": "./dist/node/index.js",
   "browser": "./dist/browser/index.js",
@@ -8,8 +8,10 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "browser": "./dist/browser/index.js",
       "node": "./dist/node/index.js",
+      "browser": "./dist/browser/index.js",
+      "import": "./dist/browser/index.js",
+      "require": "./dist/node/index.js",
       "default": "./dist/browser/index.js"
     }
   },
